--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.1.3",
     "mysql": "^2.18.1",
     "swagger-jsdoc": "6.0.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "vercel": "^33.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
